[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.22"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
before-all = [
    "yum install -y glibc-devel wget python3-devel",
]

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]

[tool.cibuildwheel]
build-verbosity = 0
before-build = [
    "rm -rf {project}/CMakeCache.txt {project}/build {project}/build_debug {project}/CMakeFiles.txt {project}/_deps",
    "mkdir -p build/ujrpc",
]

skip = ["*musllinux*", "*i686*", "pp*", "cp36-*"]

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair --lib-sdir . -w {dest_dir} {wheel}"


[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
